k8s-backup/apps/ed-thomas-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ed-thomas-dev
  labels:
    app: ed-thomas-dev
spec:
  type: ClusterIP
  selector:
    app: ed-thomas-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
