k8s-backup/apps/ed-thomas-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ed-thomas-dev
  annotations:
    traefik.Ingress.kubernetes.io/router.entrypoints: web, websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - home.ed-thomas.dev
      secretName: ed-thomas-dev-tls
  rules:
    - host: home.ed-thomas.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ed-thomas-dev
                port:
                  number: 80
